--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-ul,
-ol {
+ul, ol {
   list-style: none;
 }
 a {
@@ -15,19 +14,12 @@ a {
     cursor: pointer;
   }
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
 }
 
 body {
   font-size: 16px;
-  // 为什么这样写 font-family
-  // 答案见 https://github.com/zenozeng/fonts.css/
   line-height: 1.5;
   color: #1d2c40;
   font-family: -apple-system, "Noto Sans", "Helvetica Neue", Helvetica,
